Fixed spacing of search icons so uniform on all screen sizes

--- a/src/GoogleHome.css
+++ b/src/GoogleHome.css
@@ -76,20 +76,23 @@
   flex-direction: row;
 }
 .icons{
-  flex-grow: 0.6;
   margin: auto;
+  padding: 0px 2px;
 }
 #microphone-icon{
   order: 3;
+  padding-right: 10px;
 }
 #search-icon{
   order: 1;
+  padding-left: 10px;
 }
 #search-input{
   flex-grow: 5;
   order: 2;
   outline: none;
   border: 0px;
+  font-size: 16px;
 }
 input:focus{
   border-radius: 24px;
